Fixed image paths and updated site

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,13 @@
   <span></span>
   <span></span>
 </button>
+git init
+git add .
+git commit -m "Initial commit - static site"
+git branch -M main
+git remote add origin https://github.com/YOUR_GITHUB_USERNAME/REPO-NAME.git
+git push -u origin main
+
         <a class="brand" href="portfolio.html">Aesthetics <span>by Bridget</span></a>
         <nav id="site-nav" class="site-nav">
           <a href="index.html">Home</a>
@@ -42,34 +49,34 @@
       <section class="portfolio-gallery">
   <div class="gallery-grid">
     <div class="gallery-item">
-      <img src="images/gallery1.jpg" alt="Before and After 1">
+      <img src="Images/gallery1.jpg" alt="Before and After 1">
     </div>
     <div class="gallery-item">
-      <img src="images/gallery2.jpg" alt="Lip Filler Result">
+      <img src="Images/gallery2.jpg" alt="Lip Filler Result">
     </div>
     <div class="gallery-item">
-      <img src="images/gallery3.jpg" alt="Anti-wrinkle Treatment">
+      <img src="Images/gallery3.jpg" alt="Anti-wrinkle Treatment">
     </div>
     <div class="gallery-item">
-      <img src="images/gallery4.jpg" alt="Brow Treatment">
+      <img src="Images/gallery4.jpg" alt="Brow Treatment">
     </div>
     <div class="gallery-item">
-      <img src="images/gallery5.jpg" alt="Skin Glow Facial">
+      <img src="Images/gallery5.jpg" alt="Skin Glow Facial">
     </div>
     <div class="gallery-item">
-      <img src="images/gallery6.jpg" alt="Cheek Enhancement">
+      <img src="Images/gallery6.jpg" alt="Cheek Enhancement">
     </div>
     <div class="gallery-item">
-      <img src="images/gallery7.jpg" alt="Cheek Enhancement">
+      <img src="Images/gallery7.jpg" alt="Cheek Enhancement">
     </div>
     <div class="gallery-item">
-      <img src="images/gallery8.jpg" alt="Cheek Enhancement">
+      <img src="Images/gallery8.jpg" alt="Cheek Enhancement">
     </div>
      <div class="gallery-item">
-      <img src="images/gallery9.jpg" alt="Cheek Enhancement">
+      <img src="Images/gallery9.jpg" alt="Cheek Enhancement">
     </div>
     <div class="gallery-item">
-      <img src="images/gallery10.jpg" alt="Cheek Enhancement">
+      <img src="Images/gallery10.jpg" alt="Cheek Enhancement">
     </div>
   </div>
   </section>
