change email- remove small gap on dropdown menu

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
     <div class="card" style="margin-top:20px;">
       <h2>Other ways to reach me</h2>
       <p><strong>Phone:</strong> <a href="tel:+447517704120">+44 7517 704120</a></p>
-      <p><strong>Email:</strong> <a href="mailto:bridgetaesthetics.web@gmail.com">bridgetaesthetics.web@gmail.com</a></p>
+      <p><strong>Email:</strong> <a href="mailto:Aesthetics_By_Bridget@outlook.com">Aesthetics_By_Bridget@outlook.com</a></p>
     </div>
 
 
