added more services, fixed dropdown

--- a/index.html
+++ b/index.html
@@ -14,19 +14,17 @@
 
 </head>
 <body>
-<header class="site-header">
-  <div class="logo">
-    <img src="Images/logodark.png" alt="Logo">
-  </div>
-
-<!-- Hamburger Menu -->
+    <header class="site-header">
+      <div class="logo-brand">
+      <a class="logo"><img src="Images/logodark.png" alt="Logo"></a>
+      <a class="brand" href="index.html">Aesthetics <span>by Bridget</span></a>
+      </div>
+      <!-- Hamburger Menu -->
 <button class="nav-toggle" aria-label="Toggle navigation">
   <span></span>
   <span></span>
   <span></span>
 </button>
-
-        <a class="brand" href="index.html">Aesthetics <span>by Bridget</span></a>
         <nav id="site-nav" class="site-nav">
           <a href="index.html">Home</a>
           <a href="services.html">Services</a>
@@ -34,8 +32,7 @@
           <a href="location.html">Location</a>
           <a href="contact.html">Contact</a>
         </nav>
-</header>
-
+      </header>
   
 
 
