--- a/services.html
+++ b/services.html
@@ -15,8 +15,9 @@
 </head>
 <body>
     <header class="site-header">
-      <div class="logo">
-      <img src="Images/logodark.png" alt="Logo">
+      <div class="logo-brand">
+      <a class="logo"><img src="Images/logodark.png" alt="Logo"></a>
+      <a class="brand" href="services.html">Aesthetics <span>by Bridget</span></a>
       </div>
       <!-- Hamburger Menu -->
 <button class="nav-toggle" aria-label="Toggle navigation">
@@ -24,7 +25,6 @@
   <span></span>
   <span></span>
 </button>
-        <a class="brand" href="services.html">Aesthetics <span>by Bridget</span></a>
         <nav id="site-nav" class="site-nav">
           <a href="index.html">Home</a>
           <a href="services.html">Services</a>
@@ -134,8 +134,15 @@
       <h2>Skin Boosters</h2>
       <p><em>Brightening Dark Circles / Fine Line Eye Boosters</em></p>
       <ul class="price-list">
-        <li><span>Single Treatment</span><span>£50</span></li>
-        <li><span>4 Treatments</span><span>£150</span></li>
+        <li><span>Hyaron</span><span>£50 - 3x £150</span></li>
+        <li><span>Seventy Hyal</span><span>£80 - 2x £140</span></li>
+        <li><span>Regenovue Aqua</span><span>£80 - 2x £140</span></li>
+        <li><span>Lumi</span><span>£70</span></li>
+        <li><span>LumiPro</span><span>£70</span></li>
+        <li><span>JaluPro</span><span>£90 - 2x £150</span></li>
+        <li><span>Profile</span><span>£150 - 2x £250</span></li>
+        <li><span>Ami</span><span>£60</span></li>
+        <li><span>Pure eye boosters</span><span>£50</span></li>
       </ul>
     </section>
 
