--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,9 @@
 <body>
 
     <header class="site-header">
-      <div class="logo">
-      <img src="Images/logodark.png" alt="Logo">
+      <div class="logo-brand">
+      <a class="logo"><img src="Images/logodark.png" alt="Logo"></a>
+      <a class="brand" href="contact.html">Aesthetics <span>by Bridget</span></a>
       </div>
       <!-- Hamburger Menu -->
 <button class="nav-toggle" aria-label="Toggle navigation">
@@ -25,7 +26,6 @@
   <span></span>
   <span></span>
 </button>
-        <a class="brand" href="contact.html">Aesthetics <span>by Bridget</span></a>
         <nav id="site-nav" class="site-nav">
           <a href="index.html">Home</a>
           <a href="services.html">Services</a>
