--- a/location.html
+++ b/location.html
@@ -13,8 +13,9 @@
 
 <body>
     <header class="site-header">
-      <div class="logo">
-      <img src="Images/logodark.png" alt="Logo">
+      <div class="logo-brand">
+      <a class="logo"><img src="Images/logodark.png" alt="Logo"></a>
+      <a class="brand" href="location.html">Aesthetics <span>by Bridget</span></a>
       </div>
       <!-- Hamburger Menu -->
 <button class="nav-toggle" aria-label="Toggle navigation">
@@ -22,7 +23,6 @@
   <span></span>
   <span></span>
 </button>
-        <a class="brand" href="location.html">Aesthetics <span>by Bridget</span></a>
         <nav id="site-nav" class="site-nav">
           <a href="index.html">Home</a>
           <a href="services.html">Services</a>
@@ -31,7 +31,6 @@
           <a href="contact.html">Contact</a>
         </nav>
       </header>
-
   <main class="container">
     <section class="hero">
     <h1>Find Us</h1>
