--- a/portfolio.html
+++ b/portfolio.html
@@ -15,18 +15,16 @@
 </head>
 <body>
     <header class="site-header">
-      <div class="logo">
-      <img src="Images/logodark.png" alt="Logo">
+      <div class="logo-brand">
+      <a class="logo"><img src="Images/logodark.png" alt="Logo"></a>
+      <a class="brand" href="portfolio.html">Aesthetics <span>by Bridget</span></a>
       </div>
       <!-- Hamburger Menu -->
 <button class="nav-toggle" aria-label="Toggle navigation">
   <span></span>
   <span></span>
   <span></span>
-  
 </button>
-
-        <a class="brand" href="portfolio.html">Aesthetics <span>by Bridget</span></a>
         <nav id="site-nav" class="site-nav">
           <a href="index.html">Home</a>
           <a href="services.html">Services</a>
