--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 </div>
 
 </section>
-
   </main>
+  <script src="script.js"></script>
 
   <footer class="site-footer">
     <div class="social-links">
