--- a/location.html
+++ b/location.html
@@ -58,6 +58,7 @@
       </iframe>
       </div> 
   </main>
+  <script src="script.js"></script>
   <footer class="site-footer">
     <div class="social-links">
       <a href="https://www.facebook.com/profile.php?id=100086726771478" target="_blank" aria-label="Facebook" class="social-icon">
