--- a/location.html
+++ b/location.html
@@ -10,12 +10,14 @@
   <!-- Font Awesome for social icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 <body>
     <header class="site-header">
       <div class="logo-brand">
       <a class="logo"><img src="Images/logodark.png" alt="Logo"></a>
-      <a class="brand" href="location.html">Aesthetics <span>by Bridget</span></a>
+      <a class="brand" href="location.html">Aesthetics <span>  by Bridget</span></a>
       </div>
       <!-- Hamburger Menu -->
 <button class="nav-toggle" aria-label="Toggle navigation">
