--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
    
     <div class="about-image">
-      <img src="Images/Instagram-1.png" alt="Work in action">
+      <img src="Images/newhomepic.jpg" alt="Work in action">
     </div>
   </div>
 
