--- a/portfolio.html
+++ b/portfolio.html
@@ -59,19 +59,22 @@
       <img src="Images/gallery5.jpg" alt="Skin Glow Facial">
     </div>
     <div class="gallery-item">
-      <img src="Images/gallery6.jpg" alt="Cheek Enhancement">
+      <img src="Images/gallery6.jpg" alt="">
     </div>
     <div class="gallery-item">
-      <img src="Images/gallery7.jpg" alt="Cheek Enhancement">
+      <img src="Images/gallery7.jpg" alt="">
     </div>
     <div class="gallery-item">
-      <img src="Images/gallery8.jpg" alt="Cheek Enhancement">
+      <img src="Images/gallery8.jpg" alt="">
     </div>
      <div class="gallery-item">
-      <img src="Images/gallery9.jpg" alt="Cheek Enhancement">
+      <img src="Images/gallery9.jpg" alt="">
     </div>
     <div class="gallery-item">
-      <img src="Images/gallery10.jpg" alt="Cheek Enhancement">
+      <img src="Images/gallery10.jpg" alt="">
+    </div>
+    <div class="gallery-item">
+      <img src="Images/jawbtx1.jpg" alt="">
     </div>
   </div>
   </section>
@@ -118,6 +121,27 @@
       </div>
       <div class="image-pair">
         <img src="Images/lipfillerA1.jpg" alt="After treatment 3">
+        <p class="caption">After</p>
+      </div>
+    </div>
+
+        <div class="flipbook-slide">
+      <div class="image-pair">
+        <img src="Images/lipfillerq1.jpg" alt="Before treatment 3">
+        <p class="caption">Before</p>
+      </div>
+      <div class="image-pair">
+        <img src="Images/lipfillerq2.jpg" alt="After treatment 3">
+        <p class="caption">After</p>
+      </div>
+    </div>
+        <div class="flipbook-slide">
+      <div class="image-pair">
+        <img src="Images/lipfillerm1.jpg" alt="Before treatment 3">
+        <p class="caption">Before</p>
+      </div>
+      <div class="image-pair">
+        <img src="Images/lipfillerm2.jpg" alt="After treatment 3">
         <p class="caption">After</p>
       </div>
     </div>
